# hmmer

./: #Makefile#  .cproject  .gitignore  .project  .travis.yml  00CHECKLIST  00README  00README-FIRSTTIME-DEVELOPER  ALPHATEST  CHECKLIST  COPYRIGHT  INSTALL  LICENSE  LICENSE.tag  MAILING_LIST  Makefile  Makefile.in  NOTES_SVN  README  README-translated-search  README.md  TODO  Windows.md  aclocal.m4  buildall  checkoptions.pl  config.guess  config.status  config.sub  configure  configure.ac  configure.in  easel  makeTAGS.sh  nodebuild  rootbuild  serialize_results.csv
0.1/: COPYRIGHT  aclocal.m4  configure.ac
0.71/: 00README
1.1/: COPYRIGHT  configure.ac
1.1/autobuild/: 00README  intel-macosx-gcc  ppc-macosx
1.1/documentation/: Makefile.in
1.1/documentation/man/: phmmer.man
1.1/documentation/userguide/: Makefile.in
1.1/profmark/: x-single-ncbiblast
1.1/src/: cachedb.c  hmmdmstr.c  hmmdutils.c  hmmdwrkr.c  makenhmmerdb.c  modelstats.c  nhmmer.c  p7_builder.c  p7_config.h.in  p7_tophits.c  tracealign.c
1.1/src/impl_dummy/: impl_dummy.h
1.1/src/impl_sse/: impl_sse.h  mpi.c  msvfilter.c
1.1/src/impl_vmx/: msvfilter.c  vitfilter.c
1.1/test-speed/: x-hmmer2
1.1/testsuite/: 20aa.sto  XYPPX.hmm  i13-msa-integrity.pl  i15-hmmconvert.pl  i18-nhmmer-generic.pl  i20-fmindex-core.pl  testsuite.sqc
1.1rc2/: configure.ac
2.3/: configure.ac
2.4stable/: 00INSTALL  00README  MAILING_LIST  Makefile.in  configure.ac
3.0/: COPYRIGHT  INSTALL  Makefile.in  README  configure.ac
Bugs/: BUGTRAX  bug12.pl  bug13-mixed2.hmm  bug14-ascii.hmm  bug14-binary.hmm  bug14.pl  bug2.pl
Internal-Notes/: hmmpfam
Licenses/: COPYING.pangea  COPYING.pharmacopeia  COPYING.spsoft  LICENSE.pharmacopeia  celera  gnu  pangea  pharmacopeia  spsoft
Release-Notes/: RELEASE-2.1.3  RELEASE-2.2  RELEASE-2.3  RELEASE-2.3.1  RELEASE-2.4i
autobuild/: 00README  autobuild.pl  hmmer_autobuilds.pl  intel-freebsd-gcc  intel-linux-gcc  intel-linux-gcc-ubuntu32  intel-linux-icc-ia32  intel-linux-icc-ia32-mpi  intel-linux-icc-intel64-mpi  intel-linux-icc-mpi  intel-macosx-gcc  intel-macosx-gcc-debug  intel-macosx-gcc-mpi  ppc-aix-xlc
autom4te.cache/: output.0  requests  traces.0
benchmarks/: Makefile  Makefile.in
bjarne/: Makefile.in
bugs/: BUGTRAX  bug12-minipfam  bug2-S30431.fa
buhler/: MAILING_LIST  Makefile.in  configure.ac
bwt/: Makefile
castellanos/: 00README-FIRSTTIME-DEVELOPER  COPYRIGHT  configure.ac
contrib/: p7_thermo.c
documentation/: Makefile  Makefile.in  hmmer-Doxyfile
h3/: Makefile.in  build.c  dp_generic.c  dp_optaccuracy.c  dp_slow.c  emit.c  errors.c  evalues.c  eweight.c  heatmap.c  hmmbuild.c  hmmemit.c  hmmer.c  hmmer.h  hmmfetch.c  hmmindex.c  hmmsearch.c  hmmsim.c  impl_dummy.c  impl_fp.c  impl_h2.c  impl_jb.c  impl_jb.h  impl_sse.c  impl_sse.h  impl_sse8.c  impl_sse8.h  impl_ssep.c  impl_ssep.h  impl_vmx.c  impl_vmx.h  island.c  logsum.c  modelconfig.c  modelstats.c  mpi-hmmsim.c  mpisupport.c  null2.c  p7_alidisplay.c  p7_bg.c  (+16 more)
hmmernal2/: 00CHECKLIST  00README  INSTALL  MAILING_LIST  Makefile.in  configure.ac
libdivsufsort/: Makefile  Makefile.in
mpi/: COPYRIGHT  Makefile.in
nwo/: Dependencies.md  Makefile.in  Notation.md  ascmx.c  ascmx.h  build.c  build.h  build.md  calibrate.c  calibrate.h  cmd_build.c  cmd_emit.c  cmd_kiteline.c  cmd_statsim.c  emit.c  emit.h  eweight.c  eweight.h  fbfilter.c  fbfilter.h  fbfilter.md  fbfilter_avx.c  fbfilter_avx512.c  fbfilter_neon.c  fbfilter_sse.c  fbfilter_vmx.c  general.c  general.h  h4_anchorhash.c  h4_anchorhash.h  h4_anchorset.c  h4_anchorset.h  h4_anchorset.md  h4_build.c  h4_build.h  h4_checkptmx.c  h4_checkptmx.h  h4_checkptmx.md  h4_cmd_build.c  h4_cmd_build.h  (+105 more)
old-src/: Makefile.in  display.c  hmmpfam-pvm.c  lsj_eweight.c  matrices.c  p7_evalues.h  states.c
old-testsuite/: 3box.sto  LuxC.sto  Makefile.in  PAX8_HUMAN  Patched.hmm  RRM_1.hmm  RRM_1.sto  SMC_N.hmm  fn3-bin-swap  fn3.hmm  i002-search-variation.sh  i003-seqsearch-variation.sh  i006-hmmalign-mapali.pl  i019-hmmpgmd-ga.pl  i020-fmindex-core.pl  iobench.c  masks_test.c  parse_test_results.py  pvm.conf
old-tutorial/: 7LESS_DROME  7LES_DROME  Arthur1a.hmm  Arthur1a.sto  amino.null  fn3.hmm  fn3.sto  globins45.fa  minifam  minifam.h3f  nucleic.pri
profmark/: 00README  00README.md  Makefile  Makefile.in  compare_hmmsearch.pl  concatdb.c  create-profmark  create-profmark.c  create_tbl_ok.py  demotic_fasta.pm  demotic_hmmer.pm  hmmer2profmark  pmark-h2-fs  pmark-h2-ls  pmark-master.pl  pmark-master.py  rocplot  rocplot.c  rocplotdom.c  x-fps-diamond  x-fps-fasta  x-fps-ncbiblast+  x-hmmsearch  x-ncbiblast-fps  x-phmmer-consensus  x-phmmer-fps  x-single-ncbiblast  x-single-phmmer  x-single-ssearch  y-ehmmsearch  y-hmmsearch
px-cuda/: .#Makefile  ._00README  ._Makefile  ._engine.c  ._px.c  ._px_cuda.cu  ._px_cuda.h  ._px_serial.c  ._simd_functions.h  ._testq  00README  Makefile  disass  engine  engine.c  px  px.c  px_cuda  px_cuda.c  px_cuda.cu  px_cuda.h  px_cuda_fp.cu  px_cuda_int.cu  px_cuda_int2.cu  px_cuda_logging.cu  px_cuda_packed.cu  px_cuda_simple.cu  px_cuda_texture.cu  px_serial  px_serial.c  testq
release-notes/: 00CHECKLIST  HISTORY  LICENSE.csh  LICENSE.sh  LICENSE.tag  RELEASE-1.5  RELEASE-3.0a2  RELEASE-3.0b1  RELEASE-3.1  RELEASE-3.1b1  RELEASE-3.1b2  RELEASE-3.1rc1  RELEASE-3.2  RELEASE-3.2.1  RELEASE-3.3  RELEASE-3.3.1.md  RELEASE-3.3.2.md  RELEASE-3.3.md  RELEASE-3.4.md
src/: ._Makefile.in  Makefile  Makefile-subdirs.mk  Makefile-subdirs.mk.in  Makefile.in  align.c  alimask.c  alphabet.c  altivec.c  altivecfuncs.c  altivecfuncs.h  altivecstructs.c  altivecstructs.h  banded_fwdback.c  build.c  build.h  bwtbuild.c  cachedb.c  cachedb.h  cachedb_shard.c  cachedb_shard.h  calibration.c  camJul97.c  commutils.c  config.h  config.h.in  core_algorithms.c  customfuncs.h  debug.c  default_altivec_sharedfuncs.c  default_altivec_sharedfuncs.h  defaultstructs.c  defaultstructs.h  display.c  dp_buhler.h  dp_generic.c  dp_optaccuracy.c  e1_bg.c  e1_bg.h  e1_emit.c  (+307 more)
test-speed/: component-benchmark.pl  speed-master.pl  (+1 more)
(+2073 files in other folders)
